--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/assets/Images/Icon.png" />
+    <link rel="icon" type="image/svg+xml" href="/Images/Icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dropout Rate Analysis</title>
   </head>
